--- a/home.html
+++ b/home.html
@@ -177,7 +177,7 @@
 
         <div class="wrapperm">
             <div class="cardm">
-                <img src="/c1.jfif">
+                <img src="c1.jfif">
                 <div class="infom">
                     <h2>Kathy Calvin</h2>
                     <div class="container">
