--- a/home.html
+++ b/home.html
@@ -187,7 +187,7 @@
                 </div>
             </div>
             <div class="cardm">
-                <img src="/c2.jpg">
+                <img src="https://github.com/Asterisk174/HackNPitch_Asterisk_E-CommerceBook/blob/main/d-card1.jpeg">
                 <div class="infom">
                     <h2>Annie Frank</h2>
                     <div class="container">
