--- a/donate.html
+++ b/donate.html
@@ -94,7 +94,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8NssCnVrliGOooLMXdoT6Yf2WZCcB8WngSA&usqp=CAU" class="d-block w-100" width="1600" height="600">
+                <img src="https://lh3.googleusercontent.com/proxy/VoPwiO5HtYL8-tlbA0Y_8oCWK8Wp-aNWZrQCPmmkNJPPARBnHoBnT1xl_5kb7b0-CetElvesssolKAP9Vvk3Dvkl1CTCBj7QsQAYJI6s0AjMhDHX" class="d-block w-100" width="1600" height="600">
                 
             </div>
             <div class="carousel-item">
